[gd_scene load_steps=2 format=3 uid="uid://3x0k7pngq4l3"]

[ext_resource type="Script" path="res://src/ui/start_screen.gd" id="1_krfjq"]

[node name="StartScreen" type="Node"]
script = ExtResource("1_krfjq")

[node name="ImgBackgroud" type="RichTextLabel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[img]res://assets/splash-screen.png[/img]"

[node name="ShadedLayer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.03, 0, 0.3)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -52.0
offset_right = 90.5
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_type_variation = &"StartScreenBtn"
text = "New Game!"

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_type_variation = &"StartScreenBtn"
text = "Resume"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -120.0
offset_right = -55.0
offset_bottom = -80.0
grow_horizontal = 0
grow_vertical = 0

[node name="AboutButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme_type_variation = &"StartScreenBtn"
text = "About"

[node name="CreditsButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme_type_variation = &"StartScreenBtn"
text = "Credits"

[node name="LicenseButton" type="Button" parent="HBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme_type_variation = &"StartScreenBtn"
text = "License"

[node name="QuitButton" type="Button" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_type_variation = &"StartScreenBtn"
text = "Exit Game"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "version "

[node name="VersionLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "???"

[node name="BadSaveVersionDiag" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Save from different game version"
initial_position = 1
size = Vector2i(720, 250)
always_on_top = true
extend_to_title = true
min_size = Vector2i(720, 0)
ok_button_text = "Got it!"
dialog_text = "The saved game is from a different version of the game. Loading it might not work."
dialog_autowrap = true

[node name="CantLoadDiag" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Incompatible Save File"
initial_position = 1
size = Vector2i(720, 250)
always_on_top = true
extend_to_title = true
min_size = Vector2i(720, 0)
ok_button_text = "Got It!"
dialog_text = "Failed to load the saved game. Starting a new game seems to be your only option."
dialog_autowrap = true

[connection signal="button_up" from="VBoxContainer/NewGameButton" to="." method="start_new_game"]
[connection signal="button_up" from="VBoxContainer/ResumeButton" to="." method="resume_game"]
[connection signal="button_up" from="HBoxContainer2/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="button_up" from="HBoxContainer2/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="button_up" from="HBoxContainer2/LicenseButton" to="." method="_on_license_button_pressed"]
[connection signal="button_up" from="HBoxContainer2/QuitButton" to="." method="_on_quit_button_button_up"]
[connection signal="canceled" from="BadSaveVersionDiag" to="." method="_on_bad_save_version_diag_canceled"]
[connection signal="canceled" from="CantLoadDiag" to="." method="_on_cant_load_diag_canceled"]
